fixed responsiveness and overflow of CoinChart

--- a/src/Pages/CoinProfile/CoinProfile.scss
+++ b/src/Pages/CoinProfile/CoinProfile.scss
@@ -6,11 +6,12 @@
 	grid-gap: 0.75rem;
 	padding: 0.25rem;
 	width: 97%;
+	margin: 0 auto;
 
 	.coin-resources,
 	.coin-summary-cont,
 	.coin-description {
-		width: 100%;
+		width: auto;
 	}
 
 	a {
@@ -102,7 +103,7 @@
 
 .price-chart {
 	padding: 3rem 1rem;
-	min-width: 550px;
+	min-width: 97%;
 	max-width: 1200px;
 	margin: 0 auto;
 	min-height: 300px;
@@ -112,5 +113,10 @@
 	.coin-summary-cont {
 		display: grid;
 		grid-template-columns: auto 1fr;
+	}
+
+	#line-chart {
+		width: 100% !important;
+		height: 100% !important;
 	}
 }
